--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-textbox></app-textbox>
-<app-lookup></app-lookup>
+<h1>Passport design POC</h1>
+<button class="addbutton" (click)="onClick()">Add block</button>
+<div class="passport-canvas">
+  <app-textbox></app-textbox>
+</div>
