--- a/src/app/textbox/textbox.component.scss
+++ b/src/app/textbox/textbox.component.scss
@@ -20,35 +20,10 @@ html, body, #root {
 
 .container {
   max-width: 800px;
-  ;
 }
 
 body {
   background: #fff;
-}
-
-.logo {
-  position: relative;
-  width: 150px;
-  height: 150px;
-  margin: 0px auto;
-  font-size: 0;
-  text-align: left;
-}
-
-.logo.logos {
-  width: 320px;
-  text-align: center;
-}
-
-.logos .selecto {
-  padding: 16px;
-}
-
-.logo img {
-  position: relative;
-  height: 100%;
-  box-sizing: border-box;
 }
 
 .cube {
@@ -56,8 +31,9 @@ body {
   border-radius: 5px;
   width: 40px;
   height: 40px;
+  padding: 5px;
   margin: 4px;
-  background: #eee;
+  background: #8b8b8b;
   --color: #4af;
 }
 
