Update to angular 17

--- a/src/app/textbox/textbox.component.html
+++ b/src/app/textbox/textbox.component.html
@@ -1,4 +1,4 @@
-<div class="moveable app">
+ng <div class="moveable app">
   <div class="container">
     <ngx-selecto #selecto dragContainer=".elements" [selectableTargets]='[".selecto-area .cube"]' [hitRate]='0'
       [selectByClick]='true' [selectFromInside]='false' [toggleContinueSelect]='["shift"]' [ratio]='0'
